# ohjelmistotuotantoprojekti

./: .gitignore  LICENSE  README.md  codecov.yml
.github/workflows/: black.yml  docker_build.yml  docker_build_push.yml  e2e.yml  prettier.yml  python_tests.yml  react_tests.yml  tests.yml
backend/: .coveragerc  Dockerfile  README.md  pyproject.toml  tasks.py
backend/backend/: app.py  gemini.py  gemini_config.py  generator.py  key_config.py  llm_config.py  load_dataset.py
backend/backend/entities/: agent.py  agent_pool.py  survey_questions.py
backend/backend/services/: Llm_handler.py  agent_transformer.py  create_agent_pool.py  create_questions.py  csv_service.py  gemini.py  gemini_service.py  get_data.py  llm_handler.py  openai_service.py
backend/data/: 15_mock_agents.csv  TESTDATA.csv  answer_choices.csv  question_texts.csv
backend/production/: Dockerfile
backend/tests/: agent_pool_test.py  agent_test.py  agent_transformer_integration_test.py  agent_transformer_test.py  conftest.py  create_question_test.py  csv_service_test.py  generator_test.py  get_data_test.py  llm_handler_test.py  pool_creation_test.py  survey_questions_test.py
backend/tests/data/: answer_choices_test.csv  invalid_answer_choices_test.csv  question_test.csv  test_data.csv
docs/: ARCHITECTURE.md  DEFINITION_OF_DONE.md  FUTURE_DEVELOPMENT_IDEAS.md  OVERVIEW.md
docs/examples/: example_future_scenario.md  example_statements.csv  mock_survey.csv
frontend/: .env.production  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.mjs  vite.config.js
frontend/e2e/: agent_creation.spec.js  csv_download.spec.js  test.spec.js
frontend/production/: Dockerfile  default.conf
frontend/src/: App.jsx  index.css
frontend/src/assets/: README.md
frontend/src/components/: ChatContainer.jsx  ChatContainer.test.jsx  ChatMessage.jsx  ChatMessage.test.jsx  CsvDownload.jsx  CsvUpload.jsx  DataContainer.jsx  ErrorMessage.jsx  ErrorMessage.test.jsx  InitialDistribution.jsx  LikertBar.jsx  LikertChartContainer.jsx  LoadingIndicator.jsx  LoadingIndicator.test.jsx  OptionContainer.jsx  PageTransition.jsx  PieChart.jsx  Plot.jsx  PlotContainer.jsx  QueryForm.jsx  QueryForm.test.jsx  ScatterPlot.jsx  StackedBarChart.jsx  StatisticsContainer.jsx  SuccessMessage.jsx  Title.jsx  Title.test.jsx
frontend/src/pages/: AddQuery.jsx  FutureDistribution.jsx  FuturePage.jsx  HelpPage.jsx  IndexPage.jsx  InitialDistribution.jsx  PresentPage.jsx
frontend/src/styles/: animations.css  base.css  buttons.css  cards.css  charts.css  forms.css  layout.css  pages.css  sidebar.css
frontend/src/tests/: ChatContainer.test.jsx  ChatMessage.test.jsx  CsvUpload.test.jsx  ErrorMessage.test.jsx  LoadingIndicator.test.jsx  QueryForm.test.jsx  Title.test.jsx
