[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Onni Tuomela", email = "tonni@tuta.io"},
    {name = "Tarvo Lilja", email = "tarvo.lilja@hotmail.fi"},
    {name = "Iida Häkkinen", email = "iida.hakkinen@gmail.com"},
    {name = "Jaakko Airikkala", email = "jaakkel@gmail.com"},
    {name = "Sampsa Ollikainen", email = "sampsa.ollikainen@gmail.com"},
    {name = "Sonja Olkkonen", email = "sonja.olkkonen@gmail.com"},
    {name = "Emmi Koponen"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flask-cors (>=5.0.0,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyreadstat (>=1.2.8,<2.0.0)",
    "invoke (>=2.2.0,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "openai (>=1.65.3,<2.0.0)",
    "token-count (>=0.2.1,<0.3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Legacy format for dependabot support
[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    "Onni Tuomela <tonni@tuta.io>",
    "Tarvo Lilja <tarvo.lilja@hotmail.fi>",
    "Iida Häkkinen <iida.hakkinen@gmail.com>",
    "Jaakko Airikkala <jaakkel@gmail.com>",
    "Sampsa Ollikainen <sampsa.ollikainen@gmail.com>",
    "Emmi Koponen"
]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = ">=3.12,<4"
flask = ">=3.1.0,<4.0.0"
google-generativeai = ">=0.8.4,<0.9.0"
python-dotenv = ">=1.0.1,<2.0.0"
flask-cors = ">=5.0.0,<6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
pythonpath = ["backend"]
